# opti_projet

./: .gitignore  README.md  README.txt
code/eval/: CMakeLists.txt
code/eval/src/: main.cpp  posterEval.h  solution.h
code/eval/src/rapidjson/: document.h  reader.h
code/generator/: buildPoster.py
data/: info-photo_55.json  instances_param.csv  poster_16_0.json  poster_32_0.json  poster_48_0.json  poster_55_0.json  poster_6_0.json  solution-basic_16.sol  solution-basic_32.sol  solution-basic_48.sol  solution-basic_55.sol  solution-basic_6.sol  solution-rnd_16.sol  solution-rnd_48.sol
data/instances/: poster_1.json  poster_10.json  poster_100.json  poster_101.json  poster_102.json  poster_103.json  poster_104.json  poster_105.json  poster_106.json  poster_107.json  poster_108.json  poster_109.json  poster_11.json  poster_110.json  poster_111.json  poster_112.json  poster_113.json  poster_114.json  poster_115.json  poster_116.json  poster_117.json  poster_118.json  poster_119.json  poster_12.json  poster_120.json  poster_121.json  poster_122.json  poster_123.json  poster_124.json  poster_125.json  poster_126.json  poster_127.json  poster_128.json  poster_129.json  poster_13.json  poster_130.json  poster_131.json  poster_132.json  poster_133.json  poster_134.json  (+560 more)
