######################################################################################
### 1) Set your application properties
######################################################################################
# check cmake version compatibility
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

# project name
PROJECT(generator)

INCLUDE_DIRECTORIES(src)

######################################################################################
### 3) Compilation option
######################################################################################

#SET(CMAKE_CXX_FLAGS "-Wall -ansi -pedantic")
SET(CMAKE_CXX_FLAGS "-O3 -std=c++14")

set(CMAKE_OSX_ARCHITECTURES arm64 x86_64)

######################################################################################
### 4) Add source subdirectory
######################################################################################

add_subdirectory(src)

######################################################################################
